testdata/test/resources/com/yafred/asn1/test/should-fail/selection_undefined_type.asn
-- Component with Selection Type
-- FAILS undefined choice

Sequence DEFINITIONS AUTOMATIC TAGS ::= BEGIN

My-Sequence ::= SEQUENCE {
   component-1 two < My-Choice
}


  
END
